# python_dev_nikolaev_maxim

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.migration.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 000X_add_object_id_add_object_id_to_logs.py  2ff824309330_seed_lookups_space_type_event_type.py  65413921dd36_init.py
app/controllers/: comments_controller.py  general_controller.py
app/services/: task_manager.py
app/services/db/: clickhouse_repository.py  db2_repository.py
docker-entrypoint-initdb.d/: create_logs_db.sh
docs/specs/: description.txt
src/app/: config.py  main.py  settings.py
src/app/controllers/: comments_controller.py  general_controller.py
src/app/db/: connection.py  engine.py  models.py  session.py
src/app/domain/entities/: user.py
src/app/domain/use_cases/: comments_use_case.py  general_use_case.py
src/app/dto/: models.py
src/app/services/: data_set_builder.py
src/app/services/db/: db1_repository.py  db2_repository.py
src/scripts/: seed.py
src/tests/: conftest.py  db_seed.sql
src/tests/test_e2e/: test_api_endpoints.py
src/tests/test_integration/: test_db1_repository.py  test_db2_repository.py
src/tests/test_unit/: test_comments_use_case.py  test_general_use_case.py
tests/: conftest.py  db_init.sql
tests/test_e2e/: test_api_endpoints.py
tests/test_unit/: test_comments_use_case.py  test_general_use_case.py
